--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: 'latest'
       - name: Install dependencies
         run: npm install
       - name: Run Prettier
