--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "format": "prettier --write",
+    "format": "prettier --write .",
     "lint": "eslint . --fix",
     "prepare": "husky"
   },
